# utoipa

examples/rocket-todo/: Cargo.toml
examples/rocket-todo/src/: main.rs
tests/: path_derive_rocket.rs
utoipa-gen/src/: ext.rs  lib.rs
utoipa-gen/src/ext/: actix.rs  rocket.rs
